@@ -23,7 +23,6 @@ endif()
 add_sources(
     DEP "KernelPlatformExynos4"
     CFILES
-        src/plat/exynos_common/io.c
         src/plat/exynos4/machine/hardware.c
         src/arch/arm/machine/l2c_310.c
         src/arch/arm/machine/gic_pl390.c
