@@ -36,7 +36,6 @@ add_sources(
     CFILES
         src/arch/arm/machine/generic_timer.c
         src/plat/exynos5/machine/hardware.c
-        src/plat/exynos_common/io.c
         src/arch/arm/machine/gic_pl390.c
         src/arch/arm/machine/l2c_nop.c
 )
