@@ -73,7 +73,6 @@ endif()
 add_sources(
     DEP "KernelPlatformHikey"
     CFILES
-        src/plat/hikey/machine/io.c
         src/arch/arm/machine/generic_timer.c
         src/arch/arm/machine/gic_pl390.c
         src/arch/arm/machine/l2c_nop.c
