@@ -25,6 +25,5 @@ add_sources(
     DEP "KernelPlatformOMAP3"
     CFILES
         src/plat/omap3/machine/hardware.c
-        src/plat/omap3/machine/io.c
         src/plat/omap3/machine/l2cache.c
 )
