@@ -25,7 +25,6 @@ endif()
 add_sources(
     DEP "KernelPlatformTK1"
     CFILES
-        src/plat/tk1/machine/io.c
         src/plat/tk1/machine/smmu.c
         src/arch/arm/machine/generic_timer.c
         src/arch/arm/machine/gic_pl390.c
