@@ -26,7 +26,6 @@ endif()
 add_sources(
     DEP "KernelPlatformTx1"
     CFILES
-        src/plat/tx1/machine/io.c
         src/arch/arm/machine/generic_timer.c
         src/arch/arm/machine/gic_pl390.c
         src/arch/arm/machine/l2c_nop.c
