@@ -29,7 +29,6 @@ endif()
 add_sources(
     DEP "KernelPlatformTx2"
     CFILES
-        src/plat/tx2/machine/io.c
         src/arch/arm/machine/generic_timer.c
         src/arch/arm/machine/gic_pl390.c
         src/arch/arm/machine/l2c_nop.c
