@@ -23,7 +23,6 @@ endif()
 add_sources(
     DEP "KernelPlatformZynq7000"
     CFILES
-        src/plat/zynq7000/machine/io.c
         src/arch/arm/machine/l2c_310.c
         src/arch/arm/machine/priv_timer.c
         src/arch/arm/machine/gic_pl390.c
