@@ -37,7 +37,6 @@ add_sources(
     DEP "KernelPlatformZynqmp"
     CFILES
         src/plat/zynqmp/machine/hardware.c
-        src/plat/zynqmp/machine/io.c
         src/arch/arm/machine/generic_timer.c
         src/arch/arm/machine/gic_pl390.c
         src/arch/arm/machine/l2c_nop.c
