@@ -224,7 +224,6 @@ devices:
     - qcom,msm-uartdm
     - samsung,exynos4210-uart
     - snps,dw-apb-uart
-    - ti,am3352-uart
     - ti,omap3-uart
     - xlnx,xuartps
     chosen: stdout-path
